# ROS-Underwater-RnD

./: LICENSE  README.md
autopilot/: CMakeLists.txt  README.md  mainpage.dox  package.xml
autopilot/include/: autopilot.h  pid.h
autopilot/launch/: autopilot.launch
autopilot/msg/: AutoPilotInControl.msg
autopilot/src/: autopilot.cpp  autopilot_main.cpp  pid.cpp
autopilot/srv/: GetCurrentBehaviors.srv
auv_interfaces/: CMakeLists.txt  package.xml
auv_interfaces/msg/: CartesianPose.msg  CartesianPoseWithCovariance.msg  GeneralizedVector.msg  GeneralizedVectorWithCovariance.msg  GeoLocation.msg  ManoeuvringState.msg  MotionPerturbation.msg  SeakeepingState.msg  State.msg  StateStamped.msg
auv_interfaces/src/: helpers.cpp
auv_interfaces/test/: test_helpers.cpp
battery_monitor/: CMakeLists.txt  package.xml
battery_monitor/include/: BatteryInfo.h  CANIntf.h  CO_VehicleSBC.h  battery_monitor.h
battery_monitor/launch/: battery_monitor.launch
battery_monitor/msg/: ReportBatteryInfo.msg  ReportLeakDetected.msg
battery_monitor/src/: CANIntf.cpp  CO_PowerInterfaceSBC.od  CO_VehicleSBC.c  battery_monitor.cpp  battery_monitor_main.cpp
cmd_actuators_mux/: CMakeLists.txt  README.md  package.xml
cmd_actuators_mux/cfg/: reload.cfg
cmd_actuators_mux/launch/: cmd_actuators_mux.launch  standalone.launch
cmd_actuators_mux/param/: actuator_mux.yaml  fin_angles.yaml
cmd_actuators_mux/plugins/: nodelets.xml
cmd_actuators_mux/src/: cmd_actuator_mux_nodelet.cpp  cmd_actuator_subscribers.cpp
cmd_actuators_mux/test/: autopilot_publisher.py  jaus_ros_bridge_publisher.py
diagnostics_tools/: CMakeLists.txt  package.xml  setup.py
diagnostics_tools/src/: diagnostic.cpp  internal_diagnostic_task.cpp  periodic_event_status.cpp
fin_control/: CMakeLists.txt  README.md  package.xml
fin_control/include/: fin_control.h
fin_control/launch/: fin_control.launch
fin_control/msg/: EnableReportAngles.msg  ReportAngle.msg  SetAngle.msg  SetAngles.msg
fin_control/src/: fin_control.cpp  fin_control_main.cpp
health_monitor/: CMakeLists.txt  README.md  package.xml
health_monitor/include/: health_monitor.h
health_monitor/launch/: health_monitor.launch
health_monitor/msg/: ClearFault.msg  ReportFault.msg
health_monitor/src/: health_monitor.cpp  health_monitor_main.cpp  helpers.cpp
inputs_to_ins/: package.xml  (+1 more)
ixblue_c3_ins/: CMakeLists.txt  README.txt  package.xml
ixblue_c3_ins/include/: c3_protocol.h
ixblue_c3_ins/launch/: inputs_to_ins.launch  ixblue_c3_ins.launch
ixblue_c3_ins/msg/: C3Ins.msg  NavigationLong.msg
ixblue_c3_ins/scapy/: c3_ins.py
ixblue_c3_ins/scripts/: inputs_to_ins_node
ixblue_c3_ins/src/: c3_protocol.cpp  io_helpers.cpp  ixblue_c3_ins.cpp  ixblue_c3_ins_node.cpp  ros_helpers.cpp
keller_9lx_pressure/: CMakeLists.txt  README.md  package.xml
keller_9lx_pressure/launch/: pressure.launch
keller_9lx_pressure/scripts/: keller_9lx_pressure_main
mission_control/: CMakeLists.txt  README.md  mission.xml  package.xml
mission_control/groot_palette/: mission_control_behaviors_palette.xml
mission_control/launch/: mission_control.launch
mission_control/msg/: AbortMission.msg  AltitudeHeading.msg  FixedRudder.msg  LoadMission.msg  MissionData.msg  Ping.msg  QueryMissions.msg  ReportExecuteMissionState.msg  ReportHeartbeat.msg  SetBehavior.msg  Waypoint.msg
mission_control/src/: behavior_factory.cpp  mission.cpp  mission_control.cpp  mission_control_main.cpp  mission_parser.cpp
mission_control/test/: attitude_servo_action.test  delay_action.test  delay_for_action.test  fix_rudder_action.test  go_to_waypoint_action.test  load_execute_mission.py  mission_control_failure_modes.test  mission_control_interface.test  mission_interface.py  set_altitude_heading_action.test  set_depth_heading_action.test  test_altitude_heading_behavior.py  test_attitude_servo_action.py  test_attitude_servo_behavior.py  test_behavior_object.cpp  test_delay_action.cpp  test_delay_for_action.cpp  test_depth_heading_behavior.py  test_fix_rudder_action.py  test_fixed_rudder_behavior.py  test_go_to_waypoint.py  test_go_to_waypoint_action.py  test_if_mission_control_aborts_when_behavior_returns_time_out_failure.py  test_if_mission_control_aborts_when_behavior_returns_time_out_failure.test  test_if_mission_control_aborts_when_health_monitor_reports_fault.py  test_if_mission_control_aborts_when_health_monitor_reports_fault.test  test_if_mission_control_publishes_heartbeat.py  test_introspectable_node.cpp  test_jaus_ros_bridge_interface_mission_control.py  test_jaus_ros_bridge_interface_mission_control.test  test_log_to_bagfile_action.py  test_mission_control_behaviors.test  test_mission_control_failure_modes.py  test_mission_control_interface.py  test_mission_control_publishes_heartbeat.test  test_reactive_action.cpp  test_set_altitude_heading_action.py  test_set_depth_heading_action.py  test_timeout_action.cpp  test_waypoint_behavioral.py  (+1 more)
mission_logger/: CMakeLists.txt  package.xml  setup.py
mission_logger/launch/: bag_recorder.launch  full_logging.launch  text_logger.launch
mission_logger/scripts/: mission_bag_recorder  mission_text_logger  text_logger
mission_manager/: CMakeLists.txt  mainpage.dox  package.xml
mission_manager/include/: behavior.h  behavior_factory.h  mission.h  mission_parser.h
mission_manager/launch/: mission_manager.launch
mission_manager/msg/: AttitudeServo.msg  DepthHeading.msg  ReportLoadMissionState.msg  ReportMissions.msg
mission_manager/src/: behavior_factory.cpp  mission.cpp  mission_manager.cpp  mission_parser.cpp
payload_manager/: CMakeLists.txt  README.md  package.xml
payload_manager/launch/: payload_manager.launch
payload_manager/scripts/: payloadManagerMain
payload_manager/src/: payload_manager.cpp  payload_publisher.cpp
pose_estimator/: CMakeLists.txt  README.md  package.xml
pose_estimator/launch/: pose_estimator.launch
sea_scan_echo_sensor/: CMakeLists.txt  README.md  package.xml
side_scan_sonar_control/: CMakeLists.txt  package.xml
thruster_control/: CMakeLists.txt  README-build  README.md  package.xml
(+364 files in other folders)
