<?xml version="1.0"?>
<package format="2">
  <name>autopilot</name>
  <version>0.0.0</version>
  <description>The autopilot package</description>

  <maintainer email="Christopher.Scianna@us.QinetiQ.com">Christopher Scianna</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>auv_interfaces</build_depend>
  <build_depend>fin_control</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>thruster_control</build_depend>
  <build_depend>jaus_ros_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>mission_control</build_depend>
  <build_export_depend>auv_interfaces</build_export_depend>
  <build_export_depend>fin_control</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>thruster_control</build_export_depend>
  <build_export_depend>jaus_ros_bridge</build_export_depend>
  <build_export_depend>mission_control</build_export_depend>
  <exec_depend>auv_interfaces</exec_depend>
  <exec_depend>fin_control</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>thruster_control</exec_depend>
  <exec_depend>jaus_ros_bridge</exec_depend>
  <exec_depend>mission_control</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
