<?xml version="1.0"?>
<package format="2">
  <name>auv_interfaces</name>
  <version>0.1.0</version>
  <description>Common ROS interfaces for AUVs</description>

  <maintainer email="Christopher.Scianna@us.QinetiQ.com">Christopher Scianna</maintainer>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>roslint</test_depend>
</package>
