<?xml version="1.0"?>
<package format="2">
  <name>battery_monitor</name>
  <version>1.0.0</version>
  <description>The battery_monitor package</description>

  <maintainer email="Christopher.Scianna@us.QinetiQ.com">Christopher Scianna</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>diagnostic_tools</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>health_monitor</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>diagnostic_tools</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>health_monitor</exec_depend>

</package>
