<?xml version="1.0"?>
<package format="2">
  <name>cmd_actuators_mux</name>
  <version>0.0.0</version>
  <description>The command actuator mux package</description>

  <maintainer email="Christopher.Scianna@us.QinetiQ.com">Christopher Scianna</maintainer>
  <maintainer email="aschapiro@ekumenlabs.com">Alvaro Schapiro</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>fin_control</build_depend>
  <build_depend>jaus_ros_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>mission_control</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>thruster_control</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_export_depend>fin_control</build_export_depend>
  <build_export_depend>jaus_ros_bridge</build_export_depend>
  <build_export_depend>mission_control</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>thruster_control</build_export_depend>
  <build_export_depend>yaml-cpp</build_export_depend>
  <exec_depend>fin_control</exec_depend>
  <exec_depend>jaus_ros_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>mission_control</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>thruster_control</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelets.xml" />
  </export>
</package>
