<?xml version="1.0"?>
<package format="2">
  <name>ixblue_c3_ins</name>
  <version>0.1.0</version>
  <description>The ixblue_c3_ins package</description>

  <maintainer email="Christopher.Scianna@us.QinetiQ.com">Christopher Scianna</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>auv_interfaces</build_depend>
  <build_depend>diagnostic_tools</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>health_monitor</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>auv_interfaces</build_export_depend>
  <build_export_depend>diagnostic_tools</build_export_depend>
  <build_export_depend>diagnostic_updater</build_export_depend>
  <build_export_depend>health_monitor</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>auv_interfaces</exec_depend>
  <exec_depend>diagnostic_tools</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>health_monitor</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>roslint</test_depend>
</package>
