<?xml version="1.0"?>
<package format="2">
  <name>mission_logger</name>
  <version>0.1.0</version>
  <description>The mission_logger package</description>

  <maintainer email="Christopher.Scianna@us.QinetiQ.com">Christopher Scianna</maintainer>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <exec_depend>mission_manager</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>python-rospkg</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
